[gd_scene load_steps=4 format=3 uid="uid://cytrxtxgw2np0"]

[ext_resource type="Script" path="res://Scripts/GeoffScripts/AtticGame/Boxes/box_moving.gd" id="1_4ukvu"]
[ext_resource type="Texture2D" uid="uid://dp5yufprvq3af" path="res://Assets/GeoffAssets/big_bottle.png" id="2_l5tbb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrdht"]
size = Vector2(76, 55)

[node name="MovingBox" type="Node2D"]
script = ExtResource("1_4ukvu")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_l5tbb")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-3, -5.5)
shape = SubResource("RectangleShape2D_lrdht")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
